test/deca/context/invalid/2_7_method_sans_type.deca
// Description:
//    methode sans type
//
// Resultats:
//    Ligne 8

class A {
   methode()  {

   }
}
